# mtklib

./: .gitignore  CMakeLists.txt  conf.dox
include/: mtk.hpp
include/mtk/: core.hpp  linalg.hpp  network.hpp  ranges.hpp
include/mtk/core/: any_iterator.hpp  array.hpp  assert.hpp  byte_cast.hpp  flag_operators.hpp  guarded_ptr.hpp  iterator_traits.hpp  math.hpp  mem_cast.hpp  narrow_cast.hpp  not_null.hpp  not_nullptr.hpp  nullptr_exception.hpp  os.hpp  overload.hpp  pointer.hpp  preprocessor.hpp  reverse_iterators.hpp  saturate_cast.hpp  scope_exit.hpp  scope_guard.hpp  span.hpp  trigonometry.hpp  types.hpp  unique_ptr.hpp  version.hpp  zstring_view.hpp
include/mtk/core/impl/: actor_base.hpp  addressof.hpp  algorithm.hpp  clamp.hpp  declval.hpp  dynamic_extent.hpp  exception.hpp  move.hpp  pointer_validator.hpp  pointer_validators.hpp  require.hpp  swap.hpp
include/mtk/linalg/: fwd.hpp  matrix.hpp
include/mtk/network/: inet_address.hpp  network_interface.hpp
include/mtk/network/impl/: address.hpp  interface.hpp
include/mtk/ranges/: chain.hpp  filter.hpp  generate.hpp  range.hpp  stride.hpp  take.hpp  transform.hpp  zip.hpp
include/mtk/ranges/impl/: functor_storage.hpp  predicate_storage.hpp
src/mtk/: core.cpp  linalg.cpp  network.cpp  ranges.cpp
src/mtk/core/: any_iterator.cpp  array.cpp  assert.cpp  exception.cpp  narrow_cast.cpp  nullptr_exception.cpp  os.cpp  pointer_validators.cpp  scope_exit.cpp  scope_guard.cpp  trigonometry.cpp  zstring_view.cpp
src/mtk/network/: impl.cpp  inet_address.cpp  network_interface.cpp
src/mtk/network/unix/: address.inl  interface.inl
src/mtk/network/windows/: address.inl  interface.inl
